# ai-knowledge-filler

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Docker_Security_Checklist.md  Docker_Security_Checklist_141800.md  README.md  SECURITY.md  akf.yaml  cli.py  exceptions.py  llm_providers.py  logger.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  validate_yaml.py
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  codeql.yml  lint.yml  release.yml  secret-scan.yml  tests.yml  validate.yml
.templates/: New_Project_Checklist.md  Service_Blueprint.md
Scripts/: analyze_telemetry.py  validate_yaml.py
akf/: __init__.py  canvas_generator.py  commit_gate.py  config.py  enricher.py  error_normalizer.py  market_pipeline.py  mcp_server.py  pipeline.py  retry_controller.py  server.py  system_prompt.md  telemetry.py  validation_error.py  validator.py
akf/defaults/: akf.yaml
docs/: audit-report.md  audit.md  batch-knowledge-base-guide.md  cli-reference.md  market-analysis.md  repo-audit.md  rest-api-threat-model.md  roadmap.md  user-guide.md
docs/adr/: ADR-001_Validation_Layer_Architecture.md  ADR-002_Vault_Taxonomy_vs_Repo_Taxonomy.md  ADR-004_Identity_Content_Production_System.md
examples/: cli_quickstart.sh  legal-ops.yaml  python_api_quickstart.py  rest_api_quickstart.sh  software-engineering.yaml  technical-writing.yaml
output/: AKF_Identity_Audit_Report.md  AKF_Pipeline_Architecture_Overview_223229.md
rag/: SPEC.md  __init__.py  config.py  copilot.py  indexer.py  retriever.py  vector_store.py
tests/: test_analyze_telemetry.py  test_canvas_generator.py  test_cli_ask.py  test_cli_ask_telemetry.py  test_cli_gaps.py  test_cli_index.py  test_cli_init.py  test_commit_gate.py  test_config.py  test_error_normalizer.py  test_exceptions.py  test_logger.py  test_market_pipeline.py  test_market_pipeline_domain.py  test_mcp_server.py  test_pipeline_enrich_telemetry.py  test_pipeline_rag.py  test_retry_controller.py  test_s2_error_normalizer.py  test_s3_retry_controller.py  test_s4_commit_gate.py  test_telemetry.py  test_validate_exclusions.py  test_validation_error.py  test_validator.py
tests/fixtures/: plan.json
tests/fixtures/corpus/: 00_Index_MOC.md  AI_Consulting_Engagement_Framework.md  AI_Pipeline_Reliability_Audit_Checklist.md  API_Documentation_Structure_OpenAPI.md  API_Rate_Limiting_with_FastAPI.md  Agile_Project_Management_Solo_Developers.md  Application_Security_Checklist_REST_APIs.md  Backend_API_Production_Readiness_Checklist.md  Backend_Service_Architecture_FastAPI.md  CAP_Theorem_and_Distributed_Consistency.md  CICD_Pipeline_Design_GitHub_Actions.md  Chain_of_Thought_Reasoning_in_AI_Agents.md  Cloud_Infrastructure_Cost_Optimization_AWS.md  Competitive_Analysis_Framework_AI_Developer_Tools.md  Consulting_Deliverable_Standards.md  Data_Modeling_Patterns_Analytical_Databases.md  Deterministic_Retry_Logic_in_LLM_Pipelines.md  Docker_Multi_Stage_Builds.md  ETL_Pipeline_Design_for_Data_Warehousing.md  Event_Driven_Architecture_Design.md  Feature_Engineering_Best_Practices.md  Go_to_Market_Strategy_Open_Source_Tools.md  GraphQL_vs_REST_API_Design_Trade_offs.md  Knowledge_Management_Architecture.md  Kubernetes_Deployment_Readiness_Checklist.md  LLM_Context_Window_Management.md  LLM_Output_Validation_Pipeline_Architecture.md  ML_Model_Deployment_Patterns.md  Microservices_Architecture_Patterns.md  No_Code_Integration_Patterns.md  OAuth_2_Implementation_for_API_Authentication.md  Observability_Stack_Design.md  Obsidian_Vault_Structure_for_AI_Workflows.md  Ontology_Governance_for_AI_Generated_Knowledge_Bases.md  Personal_Knowledge_Management_System_Design.md  Product_Roadmap_Prioritization_Frameworks.md  Prompt_Engineering_Techniques_for_Structured_Output.md  Python_Packaging_Best_Practices.md  README.md  REST_API_Versioning_Strategies.md  (+9 more)
tests/fixtures/corpus/.csp/: API_Rate_Limiting_with_FastAPI.csp.yml  Backend_Service_Architecture_FastAPI.csp.yml  CICD_Pipeline_Design_GitHub_Actions.csp.yml  Cloud_Infrastructure_Cost_Optimization_AWS.csp.yml  Docker_Multi_Stage_Builds.csp.yml  Kubernetes_Deployment_Readiness_Checklist.csp.yml  ML_Model_Deployment_Patterns.csp.yml  Observability_Stack_Design.csp.yml  Observability_Stack_Design_loki.csp.yml  Python_Packaging_Best_Practices.csp.yml  Zero_Trust_Architecture_Principles.csp.yml
tests/integration/: test_api.py  test_cli.py  test_file_operations.py  test_metadata_update.py
tests/unit/: test_batch_generate.py  test_coverage_gaps.py  test_enricher.py  test_pipeline.py  test_pipeline_enrich.py  test_rag_copilot.py  test_rag_indexer.py  test_rag_retriever.py  test_schema_validation.py  test_server.py  test_validate_yaml.py
wiki/: Architecture.md  CLI-Reference.md  Configuration.md  Contributing.md  Error-Codes.md  FAQ.md  Home.md  Installation.md  MCP-Server.md  Python-API.md  REST-API-Threat-Model.md  REST-API.md
