[project]
name = "ai-knowledge-filler"
version = "1.0.0"
description = "Schema validation pipeline for LLM-generated structured Markdown. CLI · Python API · REST API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Petro Nzrnk" }]
keywords = ["obsidian", "knowledge-base", "llm", "markdown", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "slowapi>=0.1.9"]
mcp = ["mcp>=1.3.0"]
rag = [
    "python-frontmatter>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
]
all = ["anthropic>=0.40.0", "google-generativeai>=0.3.0", "openai>=1.0.0", "fastapi>=0.100.0", "uvicorn>=0.20.0", "slowapi>=0.1.9", "mcp>=1.3.0"]

[project.scripts]
akf = "cli:main"

[project.urls]
Homepage = "https://github.com/petrnzrnk-creator/ai-knowledge-filler"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.setuptools]
py-modules = ["cli", "validate_yaml", "llm_providers", "exceptions", "logger"]
packages = ["akf", "akf.defaults", "rag"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]
akf = ["defaults/*.yaml"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::coverage.exceptions.CoverageWarning",
]
