[project]
name = "ai-knowledge-filler"
version = "1.0.5"
description = "AI-powered content production system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Petro Nzrnk" }]
keywords = ["obsidian", "knowledge-base", "llm", "markdown", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6.0", "pydantic>=2.0", "requests>=2.28"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.50.0"]
groq = ["groq>=0.9.0"]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "slowapi>=0.1.9"]
mcp = ["mcp>=1.3.0"]
rag = [
    "python-frontmatter>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "numpy>=1.26.0",
    "sentence-transformers>=2.7.0",
]
all = ["anthropic>=0.50.0", "groq>=0.9.0", "openai>=1.0.0", "fastapi>=0.100.0", "uvicorn>=0.20.0", "slowapi>=0.1.9", "mcp>=1.3.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "detect-secrets>=1.5.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
]

[project.scripts]
akf = "cli:main"

[project.urls]
Homepage = "https://github.com/petro-nazarenko/ai-knowledge-filler"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["akf", "rag", "Scripts", "tests"]
extend-exclude = ["ai_knowledge_filler.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",
    "E501",
    "E712",
    "E741",
    "F401",
    "F541",
    "F811",
    "F841",
    "I001",
    "W191",
    "W292",
    "W293",
    "E401",
]

[tool.setuptools]
py-modules = ["cli", "validate_yaml", "llm_providers", "exceptions", "logger"]
packages = ["akf", "akf.defaults", "rag"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.yml"]
akf = ["defaults/*.yaml"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::coverage.exceptions.CoverageWarning",
]
